# otel-to-neo4j

./: .env.example  .gitignore  README.md  convert_hf.py  ingest.py  main.py  normalize.py  openinference_sample.json  otel_genai_sample.json  pyproject.toml  queries.cypher  schema.cypher
