[project]
name = "otel-to-neo4j"
version = "0.1.0"
description = "OpenTelemetry (OTel) for Agents to Neo4j"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=5.28.0,<7.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
hf = [
    "huggingface-hub>=1.13.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
